fix logo size on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -192,12 +192,14 @@ body {
     overflow-x: hidden;
   } */
   .logo-container {
-    width: 4.5em;
+    width: 4em;
   }
 }
 
-.logo-container {
-  width: 7em;
+@media only screen and (min-width: 501px) {
+  .logo-container {
+    width: 7em;
+  }
 }
 
 .no-scroll {
